# LIKE-fastAPI-ver

./: Dockerfile  README.md  default.conf  docker-compose.yaml  main.py  pyproject.toml
LIKE-FastAPI-ver/: main.py
docker-entrypoint-initdb.d/: main.js
static/: index.html
